# TFG

./: README.md  estructura.md  show_tree.sh
TFG_ws/: room3_sim.launch.py
TFG_ws/install/: local_setup.sh  setup.sh
TFG_ws/log/: latest_build
TFG_ws/room3/: package.xml  setup.cfg  setup.py
TFG_ws/src/room3/: CMakeLists.txt
TFG_ws/src/room3/launch/: room3_sim.launch.py
TFG_ws/src/room3/maps/room_with_walls_2/room3/: room3.world
TFG_ws/src/turtlebot4_custom_description/: CMakeLists.txt  package.xml
TFG_ws/src/turtlebot4_sim/: setup.py
TFGwebots_ws/: TB_Procesos.sh  frames_2025-04-15_10.24.02.gv  turtlebot4_slam.rviz
TFGwebots_ws/View_frames/: frames_2025-04-26_12.58.42.gv
TFGwebots_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
TFGwebots_ws/log/: latest_build  latest_list
TFGwebots_ws/simulaciones/: mapa_1.rviz  sala completa.rviz
TFGwebots_ws/simulaciones/Prueba_1/: metadata.yaml
TFGwebots_ws/simulaciones/Prueba_10/: Prueba_10_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_11/: Prueba_11_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_12/: Prueba_12_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_13/: Prueba_13_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_14/: Prueba_14_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_16/: Prueba_16_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_17/: Prueba_17_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_18/: Prueba_18_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_19/: Prueba_19_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_2/: metadata.yaml
TFGwebots_ws/simulaciones/Prueba_20/: Prueba_20_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_22/: Prueba_22_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_23/: Prueba_23_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_24/: Prueba_24_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_25/: Prueba_25_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_26/: Prueba_26_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_27/: Prueba_27_0.mcap
TFGwebots_ws/simulaciones/Prueba_28/: Prueba_28_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_29/: Prueba_29_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_3/: metadata.yaml
TFGwebots_ws/simulaciones/Prueba_30/: Prueba_30_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_4/: Prueba_4_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_5/: metadata.yaml
TFGwebots_ws/simulaciones/Prueba_6/: Prueba_6_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_7/: Prueba_7_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_8/: Prueba_8_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_9/: Prueba_9_0.mcap  metadata.yaml
TFGwebots_ws/simulaciones/Prueba_general_1/: mapa_slam_sincrono.rviz
TFGwebots_ws/src/formas/: package.xml  setup.cfg  setup.py
TFGwebots_ws/src/formas/formas/: cuadrado.py  sala_completa.py
mapa/: frames_2025-04-06_13.37.04.gv  frames_2025-04-06_13.40.48.gv  frames_2025-04-06_14.25.15.gv  frames_2025-04-06_14.28.24.gv  mapa_guardado.pgm  mapa_guardado.yaml
room3/: room3.world  room3_turtlebot4.world  test.urdf
room3/launch/: room3_sim.launch.py
(+1337 files in other folders)
